<resources>
    <string name="app_name">teacherspet</string>
    <string name="title_activity_actionsscreen">Action Screen</string>
    <string name="title_activity_student_database">Student Database</string>
    <string name="title_activity_discussionroom">Discussion Room</string>
    <string name="title_activity_testsandassignments">Tests And Assignments</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_add_student">Add Student</string>
    <string name="title_activity_testandassignmentcreate">Test Details</string>
    <string name="title_activity_student_discussion_board">Questions And Answers</string>
    <string name="radio_teacher">Teacher</string>
    <string name="radio_student">Student</string>
    <string name="title_activity_class_and_teachers">Choose your class</string>
    <string name="title_activity_add_test">Add Test</string>
    <string name="account_created">Your account has been created</string>
    <string name="teacher">Teacher</string>
    <string name="teacherslist">TeachersList</string>
    <string name="student">Student</string>
    <string name="reg_mail_id_needed">Enter your registered email id to reset password</string>
    <string name="instructions_sent">We have sent you instructions to reset your password!</string>
    <string name="failed_to_send">Failed to send reset email!</string>
    <string name="database_issue">There seems to be an issue with the database.Please try later</string>
    <string name="login_as_teacher">You are a Teacher. Please login as a teacher</string>
    <string name="not_a_teacher">You are a not a teacher.</string>
    <string name="login_incorrect">User name or password is incorrect</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="log_out">You have been logged out.</string>
    <string name="class_add">Added the class </string>
    <string name="connectrivity_issue">There seems to be a connectivity issue. Please check your connectivity.</string>
    <string name="answer">Answer: </string>
    <string name="question">Question: </string>
    <string name="deleted">Deleted</string>
    <string name="updated">Updated</string>
    <string name="enter_name_and_email">Please enter name and mail ID.</string>
    <string name="student_added">Student Added</string>
    <string name="test_added">Test has been added.</string>
    <string name="class_not_allowed">You are not allowed in this class.</string>
    <string name="authentication_failed">Authentication failed.the mail Id has already been registered.</string>
    <string name="email_required">Please enter an E-mail ID</string>
    <string name="password_required">Please enter password</string>
    <string name="password_length">Please enter a password with a length of more than 6 characters</string>
    <string name="no_such_teacher">There is no such teacher.</string>
    <string name="email">Email</string>
    <string name="delete_button">delete_button</string>
    <string name="radio_role">radioRole</string>
    <string name="user_name">et_Username</string>
    <string name="pass_word">et_Password</string>
    <string name="choose_role">Choose your role</string>
    <string name="radio_teacher_selection">radioTeacher</string>
    <string name="radio_student_selection">radioStudent</string>
    <string name="choose_teacher">Click to choose teacher</string>
    <string name="choose_student">Click to choose student</string>
    <string name="teacher_mail">Enter Your teacher\'s Mail ID</string>
    <string name="reset_button">btn_reset_password</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="progress_bar">progressBar</string>
    <string name="delete_action">Click to delete</string>
    <string name="update_action">Click to update</string>
    <string name="examandassignments">examandassignments</string>
    <string name="studentdb">studentdb</string>
    <string name="discussionroom">discussionroom</string>
    <string name="profiles">profiles</string>
    <string name="choose_exams">Click to select Exams</string>
    <string name="choose_db">Click to select Student Database</string>
    <string name="choose_discussion">Click to select Discussion Room</string>
    <string name="choose_profile">Click to select Profile</string>
    <string name="st_name">st_name</string>
    <string name="test_marks">test_marks</string>
    <string name="enter_marks">Enter marks</string>
    <string name="add_class">Add Your Class here</string>
    <string name="log_out_button">Log Out</string>
    <string name="add_class_button">add_class_button</string>
    <string name="class_list_view">class_list_view</string>
    <string name="discussionlistview">discussionlistview</string>
    <string name="Question_from_student">Question_from_student</string>
    <string name="Ask_your_question_here">Ask your question here</string>
    <string name="answer_by_teacher">answer_by_teacher</string>
    <string name="Teacher_Answer">Teacher\'s Answer</string>
    <string name="highestScore">highestScore</string>
    <string name="lowestScore">lowestScore</string>
    <string name="average">average</string>
    <string name="topranker">topranker</string>
    <string name="Student_Name">Student Name</string>
    <string name="Marks">Marks</string>
    <string name="Add_Your_Test_here">Add Your Test here</string>
    <string name="enter_name">Enter Name</string>
    <string name="Enter_mail_ID">Enter mail ID</string>
    <string name="Enter_phone_Number">Enter phone Number</string>
    <string name="Enter_parent_phone_Number">Enter Parent\'s/Guardians\'s Phone number </string>
    <string name="Enter_address">Enter Address</string>
    <string name="test_name">Test Name</string>
    <string name="MyPrefs">MyPrefs</string>
    <string name="Classes">Classes</string>
</resources>
