<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_testandassignmentcreate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mahendran.teacherspet.Test.testandassignmentcreate"
    tools:showIn="@layout/activity_testandassignmentcreate">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="6dp"
        android:id="@+id/frame"
        android:elevation="6dp">

        <TextView
            android:id="@+id/highestScore"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:contentDescription="@string/highestScore"
            android:background="?attr/selectableItemBackground"
            android:textColor="#ff0000"
            android:clickable="true"
            android:gravity="left"
            android:padding="3dp" />
        <TextView
            android:id="@+id/lowestScore"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/lowestScore"
            android:clickable="true"
            android:textColor="#ff0000"
            android:gravity="right"
            android:padding="3dp" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="6dp"
        android:id="@+id/frame2"
        android:layout_below="@+id/frame"
        android:elevation="6dp">

        <TextView
            android:id="@+id/average"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/average"
            android:textColor="#ff0000"
            android:gravity="left"
            android:padding="3dp" />
        <TextView
            android:id="@+id/topranker"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:contentDescription="@string/topranker"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:textColor="#ff0000"
            android:gravity="right"
            android:padding="3dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:padding="6dp"
        android:id="@+id/frame3"
        android:layout_below="@+id/frame2"
        android:elevation="24dp">

        <TextView
            android:text="@string/Student_Name"
            android:contentDescription="@string/Student_Name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="left"
            android:padding="3dp"
            android:paddingBottom="24dp"/>
        <TextView
            android:text="@string/Marks"
            android:contentDescription="@string/Marks"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="right"
            android:padding="3dp" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/student_test_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:elevation="12dp"
        android:scrollbars="none"
        android:padding="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frame3" />
</RelativeLayout>
